@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Group Clean-up Window</string>
+   <string>Clean Up</string>
   </property>
   <layout class="QVBoxLayout">
    <item>
